<resources>
    <string name="app_name">Carpool App</string>

    <string-array name="getRideSpinnerItems">
        <item>Time (from lowest to highest)</item>
        <item>Time (from highest to lowest)</item>
        <item>Price (from lowest to highest)</item>
        <item>Price (from highest to lowest)</item>
    </string-array>

    <string name="GetRideSpinnerTitle" translatable="false">Järjestä</string>


    <string name="userReferenceString" translatable="false">users</string>
    <string name="rideReferenceString" translatable="false">rides</string>

    <!-- Navigation Drawable -->
    <string name="navi_header_hello">Hello</string>
    <string name="navi_shouldlogin">You must log in</string>
    <string name="drawer_menu_profile">Profile</string>
    <string name="drawer_menu_rating">Rating</string>
    <string name="drawer_menu_logout">Log Out</string>
    <string name="drawer_menu_login">Log In</string>
    <string name="drawer_menu_getride">Get A Ride</string>
    <string name="drawer_menu_setride">Set A Ride</string>



    <!-- localized strings below -->
    <string name="editprofile_first_name_text">First Name</string>
    <string name="editprofile_first_name_hint">Firstname*</string>
    <string name="editprofile_last_name_text">Last Name</string>
    <string name="editprofile_last_name_hint">Lastname*</string>
    <string name="editprofile_email_text">Email</string>
    <string name="editprofile_email_hint">Email*</string>
    <string name="editprofile_phone_text">Cell</string>
    <string name="editprofile_phone_hint">Cell*</string>
    <string name="editprofile_bio_text">Bio</string>
    <string name="editprofile_bio_hint">Max 255</string>
    <string name="editprofile_apply_changes_btn_text">Apply Changes</string>
    <string name="editprofile_change_password_text">Change Password</string>
    <string name="editprofile_old_password_hint">Old Password</string>
    <string name="editprofile_new_password_hint">New Password</string>
    <string name="editprofile_confirm_password_hint">Confirm Password</string>
    <string name="editprofile_change_password_btn_text">Change Password</string>

    <string name="getride_header">Get Ride</string>
    <string name="getride_leavetime1_text">Leavetime between</string>
    <string name="getride_leavetime1_date_hint">dd/mm/yyyy</string>
    <string name="getride_leavetime1_hour_hint">hh:mm</string>
    <string name="getride_and">and</string>
    <string name="getride_leavetime2_text">Locations</string>
    <string name="getride_leavetime2_date_hint">dd/mm/yyyy</string>
    <string name="getride_leavetime2_hour_hint">hh:mm</string>
    <string name="getride_set_starting_point_text">Set starting location</string>
    <string name="getride_set_ending_point_text">Set destination</string>
    <string name="getride_search_btn_text">Search for ride</string>

    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_login_btn_text">Log In</string>
    <string name="login_signup_btn_text">Sign Up</string>
    <string name="login_forgot_pw_text">Forgot your password</string>

    <string name="setride_choose_start_text">Select starting point:</string>
    <string name="setride_check_start_position">Check starting point</string>
    <string name="setride_check_destination_position">Check destination point</string>
    <string name="setride_check_start_and_destination">Check start and destination points</string>
    <string name="setride_startpoint_query_hint">Example: Kaarnatie 5, Oulu</string>
    <string name="setride_waypoints_text">Waypoints</string>
    <string name="setride_waypoint1_hint">Example: Lahti</string>
    <string name="setride_waypoint2_hint">Example: Tampere</string>
    <string name="setride_choose_destination_text">Select destination:</string>
    <string name="setride_destination_query_hint">Example: Mannerheimintie 5, Helsinki</string>
    <string name="setride_get_route_btn_text">Get route</string>
    <string name="setride_waypoint1_mark_text">Waypoint 1</string>
    <string name="setride_waypoint2_mark_text">Waypoint 2</string>
    <string name="setride_search_location">Search location</string>
    <string name="setride_continue_button">Continue to details</string>
    <string name="setride_location_message">You have permanently danied this permission, go to settings to enable this permission</string>
    <string name="setride_location_button_positive">Go to settings</string>
    <string name="setride_location_button_negative">Cancel</string>

    <string name="setridedetails_ride_info_title">Ride Info</string>
    <string name="setridedetails_choose_leavetime_text">Pick Leavetime</string>
    <string name="setridedetails_choose_day_hint">Leaveday</string>
    <string name="setridedetails_choose_time_hint">Estimated leavetime</string>
    <string name="setridedetails_leavetime_may_vary">My leavetime may change?</string>
    <string name="setridedetails_yes">Yes</string>
    <string name="setridedetails_verbal_leavetime_estimate_hint">Verbal estimate of leavetime. Example: I\'m leaving between 12-18 o\'clock.</string>
    <string name="setridedetails_passengers_text">Passengers</string>
    <string name="setridedetails_freeslots_text">Free seats:</string>
    <string name="setridedetails_pets_allowed_text">Pets allowed</string>
    <string name="setridedetails_limited_luggage_room_text">Limited luggage room</string>
    <string name="setridedetails_estimated_luggage_hint">Verbal estimate of luggage. Example: My vehicle can only fit small luggage.</string>
    <string name="setridedetails_distanceandpricing_text">Distances &amp; Pricing</string>
    <string name="setridedetails_max_pickup_dist_text">Max pickup distance</string>
    <string name="setridedetails_ride_length_text">Travel distance</string>
    <string name="setridedetails_example_km_eur_text">Distance:\nPrice: 0 eur</string>
    <string name="setridedetails_price_hint">Price:</string>
    <string name="setridedetails_confirm_ride_btn_text">Confirm Ride</string>
    <string name="setridedetails_distance_example">Distance: </string>
    <string name="setridedetails_price_example">Price: </string>
    <string name="setridedetails_km_example"> per kilometer</string>

    <string name="signup_header">Sign Up</string>
    <string name="signup_fname_hint">Firstname*</string>
    <string name="signup_lname_hint">Lastname*</string>
    <string name="signup_email_hint">Email*</string>
    <string name="signup_phone_hint">Cell*</string>
    <string name="signup_pw_hint">Enter Password*</string>
    <string name="signup_pw_confirm_hint">Confirm Password*</string>
    <string name="signup_tos_checkbox_text">I accept the Terms of Service.</string>
    <string name="signup_tos_link">Terms of Services Here.</string>
    <string name="signup_signup_btn_text">Sign Up</string>

    <string name="ridedetailsdialog_book_ride_btn_text">Book ride</string>
    <string name="myalertdialog_title">Done!</string>
    <string name="myalertdialog_details">Great! Ride has been successfully created. Return to main menu by pressing OK.</string>
    <string name="myalertdialog_ok_btn_text">OK</string>
    <string name="myalertdialog2_title">Hupsista!</string>
    <string name="myalertdialog2_details">Something went wrong creating the ride, please try again</string>
    <string name="myalertdialog2_ok_btn_text">OK</string>
    <string name="getridespinner_order_rides_text">Order by</string>


    <string name="myalertdialog_moikka_text">Hello</string>

    <!-- MainActivity -->
    <string name="main_button_book_ride">Get A Ride</string>
    <string name="main_button_offer_ride">Offer A Ride</string>
    <string name="main_fragment_tab_offered">Offered rides</string>
    <string name="main_fragment_no_offered_rides">No offered rides</string>
    <string name="main_fragment_no_booked_rides">No booked rides</string>
    <string name="main_fragment_tab_booked">Booked rides</string>

    <string name="find_ride_details_startpoint">from</string>
    <string name="find_rides_details_destination">to</string>
    <string name="find_ride_details_est_time">Estimated leave time</string>
    <string name="find_rides_details_est_duration">Estimated duration</string>
    <string name="find_ride_details_price">Price</string>
    <string name="find_ride_details_free_seats">Free seats</string>
    <string name="find_ride_details_per_100_km">euros per 100 kilometers</string>
    <string name="find_ride_details_distance">Ride distance</string>
    <string name="find_ride_details_pet_false">No pets allowed</string>
    <string name="find_ride_details_pet_true">Pets allowed</string>

    <string name="cancel">Cancel</string>

    <string name="main_activity_ride_details_cancel_trip">Cancel trip</string>
    <string name="getride_dialog_close">Close</string>
    <string name="getride_find_matching_route">Finding matching route</string>
    <string name="getride_rides_not_found">Rides not found</string>
    <string name="getride_check_startpoint_and_destination">Check start point and destination</string>
    <string name="getride_check_dates_and_time">Check dates and times</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="getrideadapter_estimated_price_per_100">Estimated price per 100km</string>
    <string name="getrideadapter_estimated_leave_day">Estimated leave day</string>
    <string name="getrideadapter_estimated_leave_time">Estimated leave time</string>
    <string name="getride_success_text">Great! Ride has been booked successfully. Return to main menu by pressing OK.</string>
    <string name="getride_failed_text">Something went wrong while booking ride, please try again</string>
    <string name="find_ride_details_luggage">Luggage notes</string>
    <string name="find_ride_details_departure">Leavetime notes</string>
    <string name="find_ride_details_no_departure">The ride has no comments regarding departure time.</string>
    <string name="find_ride_details_no_luggage">The ride has no comments regarding luggage.</string>
    <string name="ride_details_confirm_booking">Confirm the booking</string>
    <string name="book">Book</string>
    <string name="warning">Warning</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="main_activity_ride_details_delete_booked_ride">Are you sure you want to cancel the booking for this trip?</string>
    <string name="main_activity_ride_details_delete_offered_ride">Are you sure you want to cancel the ride you have offered?</string>
    <string name="main_activity_adapter_delete_booked_ride">You have canceled the booked trip</string>
    <string name="main_activity_adapter_delete_offered_ride">You have canceled the offered ride</string>
    <string name="get_ride_details_confirm_ride_msg">By confirming the booking of this trip you also accept all the terms of use related to the application</string>
    <string name="no_participants">No participants</string>
    <string name="no_rating">No rating</string>


</resources>
