<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_loginfo"
            android:title="">
            <menu>
                <item android:id="@+id/nav_profile"
                    android:icon="@drawable/ic_baseline_person_24"
                    android:title="@string/drawer_menu_profile" />

                <item android:id="@+id/nav_rating"
                    android:icon="@drawable/ic_baseline_star_rate_24"
                    android:title="@string/drawer_menu_rating"/>

                <item android:id="@+id/nav_sign"
                    android:icon="@drawable/ic_login_24"
                    android:title="" />
            </menu>
        </item>

        <item android:id="@+id/nav_getride"
            android:icon="@drawable/ic_baseline_car_24"
            android:title="@string/drawer_menu_getride" />
        <item android:id="@+id/nav_setride"
            android:icon="@drawable/ic_add_road_24"
            android:title="@string/drawer_menu_setride" />

        
    </group>


</menu>