<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="30dp"
        tools:context=".EditProfileActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/editprofile_guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/editprofile_guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/editprofile_profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:onClick="pickImage"
            android:src="@drawable/ic_person_add_black_100dp"
            app:civ_border_color="@color/green"
            app:civ_circle_background_color="@color/pastelGreen"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toStartOf="@+id/editprofile_guideline_right"
            app:layout_constraintStart_toStartOf="@+id/editprofile_guideline_left"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/editprofile_textViewfName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:paddingLeft="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/editprofile_first_name_text"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/editprofile_guideline_left"
            app:layout_constraintEnd_toStartOf="@+id/editprofile_textViewlName"
            app:layout_constraintTop_toBottomOf="@+id/editprofile_profile_image"/>

        <TextView
            android:id="@+id/editprofile_textViewlName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/editprofile_last_name_text"
            android:paddingTop="24dp"
            android:paddingLeft="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/editprofile_guideline_right"
            app:layout_constraintStart_toEndOf="@+id/editprofile_textViewfName"
            app:layout_constraintTop_toBottomOf="@+id/editprofile_profile_image"/>

        <EditText
            android:id="@+id/editprofile_firstNameedit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/editprofile_first_name_hint"
            android:inputType="text"
            android:maxLines="1"
            android:text="fName"
            android:textColorHint="@color/hintlog"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/editprofile_lastNameedit"
            app:layout_constraintStart_toStartOf="@+id/editprofile_guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/editprofile_textViewfName"/>

        <EditText
            android:id="@+id/editprofile_lastNameedit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/editprofile_last_name_hint"
            android:inputType="text"
            android:maxLines="1"
            android:text="lName"
            android:textColorHint="@color/hintlog"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/editprofile_guideline_right"
            app:layout_constraintStart_toEndOf="@+id/editprofile_firstNameedit"
            app:layout_constraintTop_toBottomOf="@+id/editprofile_textViewlName"/>

        <TextView
            android:id="@+id/editprofile_textViewEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/editprofile_email_text"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/editprofile_guideline_right"
            app:layout_constraintStart_toStartOf="@+id/editprofile_guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/editprofile_firstNameedit"/>

        <EditText
            android:id="@+id/editprofile_emailedit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Email"
            android:hint="@string/editprofile_email_hint"
            android:inputType="text"
            android:maxLines="1"
            android:textColorHint="@color/hintlog"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="18sp"
            android:drawableStart="@drawable/ic_mail_outline_black_24dp"
            android:drawablePadding="16dp"
            app:layout_constraintEnd_toStartOf="@+id/editprofile_guideline_right"
            app:layout_constraintStart_toStartOf="@+id/editprofile_guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/editprofile_textViewEmail"/>

        <TextView
            android:id="@+id/editprofile_textViewPhoNum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/editprofile_phone_text"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/editprofile_guideline_right"
            app:layout_constraintStart_toStartOf="@+id/editprofile_guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/editprofile_emailedit"/>

        <EditText
            android:id="@+id/editprofile_phoNumedit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="phoNum"
            android:hint="@string/editprofile_phone_hint"
            android:maxLines="1"
            android:inputType="phone"
            android:textColorHint="@color/hintlog"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="18sp"
            android:drawableStart="@drawable/ic_call_black_24dp"
            android:drawablePadding="16dp"
            app:layout_constraintEnd_toStartOf="@+id/editprofile_guideline_right"
            app:layout_constraintStart_toStartOf="@+id/editprofile_guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/editprofile_textViewPhoNum"/>

        <TextView
            android:id="@+id/editprofile_textViewBio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/editprofile_bio_text"
            android:paddingTop="10dp"
            android:paddingLeft="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/editprofile_guideline_right"
            app:layout_constraintStart_toStartOf="@+id/editprofile_guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/editprofile_phoNumedit"/>

        <EditText
            android:id="@+id/editprofile_bioedit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:hint="@string/editprofile_bio_hint"
            android:maxLength="255"
            android:lines="17"
            android:maxLines="17"
            android:gravity="top"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/hintlog"
            app:layout_constraintEnd_toStartOf="@+id/editprofile_guideline_right"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editprofile_guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/editprofile_textViewBio"
            android:background="@drawable/bg_round"
            android:fontFamily="@font/open_sans_regular"/>

        <Button
            android:id="@+id/editprofile_saveProfileDetailButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button1"
            android:text="@string/editprofile_apply_changes_btn_text"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/pastelGreen"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@+id/editprofile_guideline_right"
            app:layout_constraintStart_toStartOf="@+id/editprofile_guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/editprofile_bioedit"
            android:onClick="saveChanges"/>

        <TextView
            android:id="@+id/editprofile_textViewPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/editprofile_change_password_text"
            android:paddingTop="24dp"
            android:paddingLeft="5dp"
            android:fontFamily="@font/montserrat_medium"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/editprofile_guideline_right"
            app:layout_constraintStart_toStartOf="@+id/editprofile_guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/editprofile_saveProfileDetailButton"/>

        <EditText
            android:id="@+id/editprofile_oldPassedit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/editprofile_old_password_hint"
            android:fontFamily="@font/open_sans_regular"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textColorHint="@color/hintlog"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/editprofile_guideline_right"
            app:layout_constraintStart_toStartOf="@+id/editprofile_guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/editprofile_textViewPassword" />

        <EditText
            android:id="@+id/editprofile_passedit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/editprofile_new_password_hint"
            android:fontFamily="@font/open_sans_regular"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textColorHint="@color/hintlog"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/editprofile_guideline_right"
            app:layout_constraintStart_toStartOf="@+id/editprofile_guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/editprofile_oldPassedit" />


        <EditText
            android:id="@+id/editprofile_passtwoedit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/editprofile_confirm_password_hint"
            android:fontFamily="@font/open_sans_regular"
            android:maxLines="1"
            android:inputType="textPassword"
            android:textColorHint="@color/hintlog"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/editprofile_guideline_right"
            app:layout_constraintStart_toStartOf="@+id/editprofile_guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/editprofile_passedit" />

        <Button
            android:id="@+id/editprofile_changePasswordButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_button1"
            android:text="@string/editprofile_change_password_btn_text"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/pastelGreen"
            android:fontFamily="@font/montserrat_medium"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintEnd_toStartOf="@+id/editprofile_guideline_right"
            app:layout_constraintStart_toStartOf="@+id/editprofile_guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/editprofile_passtwoedit"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>