<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_backgroundlogin"
    tools:context=".LogInActivity">

    <!-- ldpi x0.75, mdpi x1, hdpi x1.5, xdpi x2, xxdpi x2.5 -->

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="52dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toStartOf="@+id/login_guideline_right"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/login_guideline_left"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_usernameEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:backgroundTint="@color/green"
        android:drawableStart="@drawable/ic_perm_identity_black_24dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/montserrat_medium"
        android:hint="@string/login_username_hint"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/green"
        android:textColorHint="@color/lightgreen"
        app:layout_constraintEnd_toStartOf="@id/login_guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/login_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/login_logo" />

    <EditText
        android:id="@+id/login_passwordEdit"
        android:inputType="textPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/login_guideline_right"
        app:layout_constraintStart_toStartOf="@id/login_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/login_usernameEdit"
        android:maxLines="1"
        android:hint="@string/login_password_hint"
        android:textColorHint="@color/lightgreen"
        android:textColor="@color/green"
        android:backgroundTint="@color/green"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="16dp"
        android:fontFamily="@font/montserrat_medium"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="60dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/login_guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="60dp" />

    <Button
        android:id="@+id/login_loginButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/login_login_btn_text"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/green"
        app:layout_constraintEnd_toStartOf="@+id/login_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/login_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/login_passwordEdit"
        android:background="@drawable/custom_button1"
        android:fontFamily="@font/montserrat_medium"/>

    <Button
        android:id="@+id/login_signupButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_signup_btn_text"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/green"
        app:layout_constraintEnd_toStartOf="@+id/login_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/login_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/login_loginButton"
        android:background="@drawable/custom_button1"
        android:fontFamily="@font/montserrat_medium"/>

    <!--
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/hintlog"
        android:text="@string/login_forgot_pw_text"
        android:paddingTop="10dp"
        android:paddingRight="130dp"
        app:layout_constraintEnd_toStartOf="@+id/login_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/login_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/login_loginButton"
        android:fontFamily="@font/montserrat_medium"/>
    -->


</androidx.constraintlayout.widget.ConstraintLayout>